<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.fragments.LoginFragment">

    <data>

        <variable
            name="vm"
            type="com.example.assignmentrxjava.presentation.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome_text"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="18.sp"
            android:textColor="@color/dark_blue"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/light_blue">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_margin="10dp">

                <EditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/email"
                    android:maxLines="2"
                    android:inputType="textEmailAddress"
                    android:layoutDirection="locale"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/invalidEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invalid_email"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:autofillHints="password"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layoutDirection="locale"
                    android:maxLength="15"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/invalidPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invalid_pass"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/button_background"
                    android:elevation="5dp"
                    android:enabled="false"
                    android:text="@string/login"
                    android:textColor="@color/white" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>